# ffpic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
app/: coding_test.c  picinfo.c  picshow.c  sdlshow.c  transbmp.c  transcode.c
arch/: accl.c  accl.h
arch/opencl/: opcl.c  opcl.cl  opcl.h
arch/vulkan/: vk_idct.c  vk_idct.h  vulkan_idct.comp
arch/x86/: avx.c  sse2.c  x86.h
cmake/sdl2/: FindSDL2.cmake
coding/: arithmetic.c  arithmetic.h  booldec.c  booldec.h  boolentropy.c  boolentropy.h  cabac.c  cabac.h  coding.h  deflate.c  deflate.h  golomb.c  golomb.h  hevc.c  hevc.h  huffman.c  huffman.h  lz77.c  lz77.h  lzw.c  lzw.h
display/: bmpwriter.c  bmpwriter.h  display.c  display.h  screen.c  screen.h  sdl_screen.c  sdl_screen.h
format/: avif.c  avif.h  basemedia.c  basemedia.h  bmp.c  bmp.h  bpg.c  bpg.h  exr.c  exr.h  file.c  file.h  gif.c  gif.h  heif.c  heif.h  ico.c  ico.h  jp2.c  jp2.h  jpg.c  jpg.h  png.c  png.h  pnm.c  pnm.h  predict.c  predict.h  psd.c  psd.h  svg.c  svg.h  tga.c  tga.h  tiff.c  tiff.h  webp.c  webp.h
python/: dct.py  quality.py
tests/: CMakeLists.txt  test_bitstream.c  test_dct.c  test_huffman.c  test_queue.c
utils/: alder.c  bitstream.c  bitstream.h  byteorder.c  byteorder.h  colorspace.c  colorspace.h  crc.c  crc.h  hexdump.c  idct.c  idct.h  queue.c  queue.h  utils.c  utils.h  vlog.c  vlog.h
